# ops-knowledge-studio-public

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: deployment.md  first-stage-hardening.md  minimax-mini-agent-integration.md
harness/: __init__.py  api_client.py  config.py  model.py  run_store.py  runtime.py  tools.py  trace.py
knowledge_platform/: __init__.py  agent.py  cli.py  documents.py  prompts.py  retrieval.py  runtime_tasks.py  schema.py  service.py  store.py  web.py
knowledge_platform/static/: app.js  index.html  styles.css
knowledge_sources/: README.md
knowledge_sources/public_test_corpus/: SOURCES.md
knowledge_sources/public_test_corpus/prepared/: 03_github_recent_incidents.json  04_cisa_kev_latest_sample.csv  05_rfc9110_operations_excerpt.txt  06_dfe_cyber_response_plan.docx
sample_data/: demo_upgrade_sop.md
scripts/: diagnose_document_chunk.py  ocr_smoke_test.py  run_agent_query_test.py  run_public_corpus_import.py  run_public_corpus_queries.py  start_server.py
tests/: test_platform.py  test_runtime.py  test_scripts.py
